--- a/themes/custom/templates/base.html
+++ b/themes/custom/templates/base.html
@@ -6,6 +6,8 @@
       {% endblock %}
     </title>
     <meta charset="utf-8" />
+    <meta name=viewport content=width=device-width
+          initial-scale = 1>
     <link rel="stylesheet"
           href="/theme/css/{{ CSS_FILE }}" />
   </head>
